<resources>
    <string name="app_name" translatable="false">LuckTime</string>
    <string name="facebook_app_id" translatable="false">244092392933033</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb244092392933033</string>
    <string name="profilereklam">Watching Ad :</string>
    <string name="infojoin">You can\'t jon in a row.At least you must watch an add</string>
    <string name="buttonnojoin">Haven\'t Started Yet.</string>
    <string name="buttonfinishedwait">Waiting the Results...</string>
    <string name="sozlesmetamam">Okay</string>
    <string name="adcantload">Could not load Ads. Try Again.</string>
    <string name="loginactivity_emailverification">Check your E-mail Address</string>
    <string name="loginactivity_authfailed">Login Failed.</string>
    <string name="loginactivity_emptyfield">Please Fill in all Fields.</string>
    <string name="registrationactivity_success">Registration Successful</string>
    <string name="registrationactivity_sameemail">E-mail already exists.</string>
    <string name="loginactivity_authsucces">Login Successful.</string>
    <string name="buttonizle">Watch Ad</string>
    <string name="hinpromotion">Promotion Code</string>
    <string name="cancel">Cancel</string>
    <string name="fragmentizleme">WIN</string>
    <string name="fragmentmagaza">LUCK</string>
    <string name="fragmenttahmin">Estimation</string>
    <string name="hintname">Name - Surname</string>
    <string name="hintpassword">Password</string>
    <string name="openbox">Open it.</string>
    <string name="noboxinfo">You have no any Chest</string>
    <string name="lostinfo">LOST</string>
    <string name="photouploaded">Picture Loaded</string>
    <string name="photouploading">Loading...</string>
    <string name="photouploadingerror">Error Loading</string>
    <string name="prizetablo">TABLE OF REWARD</string>
    <string name="promotionused">You already used a Promotion Code</string>
    <string name="promotionwrong">Invalid Code</string>
    <string name="registerinfo">REGISTER PAGE</string>
    <string name="tahminucret">Price</string>
    <string name="tahminodul">Prize</string>
    <string name="tahminkapanma">Closure Date</string>
    <string name="tahminfinished">FINISHED</string>
    <string name="tahminclosed">CLOSED. Waiting of Results..</string>
    <string name="wantopen">, Do you want to open it ?</string>
    <string name="yes">Yes</string>
    <string name="yourtahmin">Your estimate :</string>
    <string name="textlogintoreg">You have not an account yet ?</string>
    <string name="tahminwait">Please Wait for a new Question.</string>
    <string name="silverinfo">Silver Chest</string>
    <string name="sansgumus">Silver Luck</string>
    <string name="sansbronz">Bronze Luck</string>
    <string name="sansaltin">Golden Luck</string>
    <string name="prizelistucret">Price of Prize :</string>
    <string name="prizelistodul">Prize Name :</string>
    <string name="emailonayinfo">Check Your E-mail Address for Member Activation</string>
    <string name="acceptregister">You must accept the terms to become a member.</string>
    <string name="errorverify">Verification not successful. Try Again.</string>
    <string name="successverify">Check Your E-mail Address for Member Activation.</string>
    <string name="errorregister">Registration not successful, E-mail address could be exists.</string>
    <string name="controlconnection">Check your Internet Connection.</string>
    <string name="goldinfo">Golden Chest</string>
    <string name="prizelistfirst">Momentary Owner :</string>
    <string name="gainedgold">You won the Golden Chest.</string>
    <string name="buttonfirst">You are Ahead.</string>
    <string name="bronzinfo">Bronze Chest</string>
    <string name="gainedbronz">You won the Bronze Chest.</string>
    <string name="duelloduruminfo">DAILY RANKING</string>
    <string name="duellodurumduninfo">YESTERDAY</string>
    <string name="buttonlogin">Log In</string>
    <string name="duelloinfo1">DAILY WATCHING ADS</string>
    <string name="gainedsilver">You won the Silver Chest.</string>
    <string name="sansgumusinfo">Each of the 50 people earn the Silver Chest.</string>
    <string name="sansaltininfo">Each of the 100 people earn the Golden Chest.</string>
    <string name="sansbronzinfo">Each of the 25 people earn the Bronze Chest.</string>
    <string name="duelloinfo2">"From 00:00 to 23:59 "</string>
    <string name="prizelistkatilimkalan">Remaining Attendance :</string>
    <string name="prizelistkatilim">Attendance :</string>
    <string name="buttonjoin">Join</string>
    <string name="buttonfinished">Finished</string>
    <string name="buttonregister">Register</string>
    <string name="buttonwin">Winner :</string>
    <string name="buttonwon">YOU WON</string>
    <string name="buttonproonay">"Confirmation "</string>
    <string name="duelloizlemeinfo">Watching Ad</string>
    <string name="duelloinfo3">Watch Ad and Earn Rewards</string>
    <string name="askpayrip">RİP, Do you want to confirm ?</string>
    <string name="gainedrip">RİP, You Earned.</string>
    <string name="sansinfo">TRY YOUR LUCKY (1 RİP)</string>
    <string name="buttontryagain">Try Again</string>
    <string name="buttonnorip">You have no enough RİP</string>
    <string name="buttoninitial">ADS INITIALIZING </string>
    <string name="UNITYID" translatable="false">2829579</string>
    <string name="ADMOBKEY" translatable="false">ca-app-pub-2648309604179255~4302093668</string>
    <string name="ADMOBREWARDEDKEY" translatable="false">ca-app-pub-2648309604179255/8349149888</string>
    <string name="ADMOBBANNERKEY" translatable="false">ca-app-pub-2648309604179255/6768099542</string>
    <string name="admin" translatable="false">yO362F50dtQcMh3yaNsUFvn5O5J2</string>
    <string name="timezone" translatable="false">Asia/Istanbul</string>
    <string name="timeformat" translatable="false">dd/MM/yyyy</string>
    <string name="timehourformat" translatable="false">HH:mm</string>
    <string name="dbname_users" translatable="false">users</string>
    <string name="dbname_raffle" translatable="false">raffle</string>
    <string name="dbname_promotions" translatable="false">promotions</string>
    <string name="dbname_tahmin" translatable="false">tahmin</string>
    <string name="dbname_odul" translatable="false">duelloodul</string>
    <string name="dbname_box" translatable="false">boxes</string>
    <string name="dbname_duello" translatable="false">duello</string>
    <string name="dbname_prize" translatable="false">prize</string>
    <string name="dbname_tahminoyna" translatable="false">tahminoynayan</string>
    <string name="dbname_duellokazanan" translatable="false">duellokazanan</string>
    <string name="dbname_rafflegift" translatable="false">rafflegift</string>
    <string name="dbname_money" translatable="false">money</string>
    <string name="field_user_id" translatable="false">user_id</string>
    <string name="field_miktar" translatable="false">miktar</string>
    <string name="field_iban" translatable="false">iban</string>
    <string name="field_sonucbilen" translatable="false">sonuc_bilen</string>
    <string name="field_altin" translatable="false">altin</string>
    <string name="field_gumus" translatable="false">gumus</string>
    <string name="field_bronz" translatable="false">bronz</string>
    <string name="field_altinbox" translatable="false">altinbox</string>
    <string name="field_gumusbox" translatable="false">gumusbox</string>
    <string name="field_bronzbox" translatable="false">bronzbox</string>
    <string name="field_rip" translatable="false">rip</string>
    <string name="field_sira" translatable="false">sira</string>
    <string name="field_dunonay" translatable="false">dunonay</string>
    <string name="field_date" translatable="false">date</string>
    <string name="field_kazanan" translatable="false">wonname</string>
    <string name="field_siradun" translatable="false">siradun</string>
    <string name="field_izledun" translatable="false">izlemedun</string>
    <string name="field_million" translatable="false">millions</string>
    <string name="field_kazananpuan" translatable="false">kazananpuan</string>
    <string name="field_kazananuser" translatable="false">kazananuser</string>
    <string name="field_kazananuserid" translatable="false">kazananuserid</string>
    <string name="field_katilim" translatable="false">katilim</string>
    <string name="field_situationcevap" translatable="false">situation_cevap</string>
    <string name="field_sonuctoplam" translatable="false">sonuc_toplam</string>
    <string name="field_situationoynanma" translatable="false">situation_oynanma</string>
    <string name="field_adress" translatable="false">adres</string>
    <string name="field_sanssira" translatable="false">sans_sira</string>
    <string name="field_kullanan" translatable="false">kullanan</string>
    <string name="field_watchad" translatable="false">watch_ad</string>
    <string name="field_izleme" translatable="false">izleme</string>
    <string name="field_code" translatable="false">codes</string>
    <string name="field_durum" translatable="false">durum</string>
    <string name="field_odul" translatable="false">odul</string>
    <string name="field_situationyayin" translatable="false">situation_yayin</string>
    <string name="field_onay" translatable="false">onay</string>
    <string name="field_email" translatable="false">email</string>
    <string name="field_money" translatable="false">money</string>
    <string name="field_odulsira1" translatable="false">sira1odul</string>
    <string name="field_userpicture" translatable="false">picture</string>
    <string name="emailadress" translatable="false">lucktimeapp@gmail.com</string>
    <string name="gain_fragment" translatable="false">Gain Fragment</string>
    <string name="rip_fragment" translatable="false">Store Fragment</string>
    <string name="profile_fragment" translatable="false">Profile Fragment</string>
    <string name="rip" translatable="false">RİP</string>
    <string name="TL" translatable="false">TL</string>
    <string name="dbstorage_pp" translatable="false">pictures</string>
    <string name="hintemail" translatable="false">E-mail</string>
    <string name="profilerip" translatable="false">RİP :</string>
    <string name="field_canjoin" translatable="false">canjoin</string>
    <string name="field_prize" translatable="false">prize</string>
    <string name="linkgizlilik" translatable="false">Gizlilik Politikası</string>
    <string name="linkkullanim" translatable="false">Kullanım Şartları ve</string>
    <string name="linkresmi" translatable="false">Yarışma Kurallarını Kabul Ediyorum.</string>
    <string name="gizlilik" translatable="false">Gizlilik Politikası</string>
    <string name="kullanim" translatable="false">Kullanım Şartları</string>
    <string name="resmi" translatable="false">Yarışma Kuralları</string>
    <string name="duelloizlemesiinfo">Rank</string>
    <string name="wanttry">, Do you want to try Your Luck ?</string>
    <string name="tryagain">Unfortunately, Try Again.</string>
    <string name="congratulations">Congratulations, You are first for now.</string>
    <string name="buttonsignup">Sign Up</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="chooseway">Choose a way to load Picture</string>
</resources>