<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="110dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/sansinfo"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/startRed"
                android:layout_gravity="center"/>

            <Button
                android:id="@+id/btn_luckaltin"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:textAllCaps="false"
                android:text="@string/sansaltin"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                android:background="@drawable/background_signup"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sansaltininfo"
                android:textSize="14sp"
                android:background="@drawable/backgroundtext"
                android:layout_marginTop="5dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_gravity="center"/>

            <Button
                android:id="@+id/btn_luckgumus"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/sansgumus"
                android:layout_marginHorizontal="20dp"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:background="@drawable/background_signup"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sansgumusinfo"
                android:textSize="14sp"
                android:background="@drawable/backgroundtext"
                android:layout_marginTop="5dp"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_gravity="center"/>

            <Button
                android:id="@+id/btn_luckbronz"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:textAllCaps="false"
                android:text="@string/sansbronz"
                android:layout_marginHorizontal="20dp"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                android:background="@drawable/background_signup"/>

            <TextView
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sansbronzinfo"
                android:background="@drawable/backgroundtext"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_gravity="center"/>

        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/progressbar"/>

</RelativeLayout>