<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/background_gradient">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_margin="10dp"
        android:textColor="@color/white"
        android:id="@+id/tv_dialogque"
        android:text="@string/chooseway"
        android:textAlignment="center"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:layout_marginRight="30dp">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:layout_gravity="center"
                android:textColor="@color/endRed"
                android:id="@+id/btn_diayes"
                android:background="@drawable/ic_camarepic"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/camera"
                android:textSize="15sp"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:layout_marginLeft="30dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:textColor="@color/endRed"
                android:id="@+id/btn_diano"
                android:background="@drawable/ic_gallery"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gallery"
                android:textSize="15sp"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:textStyle="bold"/>

        </LinearLayout>


    </LinearLayout>
</LinearLayout>